--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     
     <!--Container-Fluid que abrigará o Logotipo do Sistema-->
     <div class="container-fluid text-center" style="margin-top: 30px; margin-bottom: 30px;">
-      <img src="img/concha.jpg" width="200">
-         <h1>Shells and Water</h1>
-
+      <div class="card" style="width:100%">
+      <img class="card-img-top" src="img/concha.png">
     </div>
 
     <!--Aqui ficará a barra de navegação do Sistema-->
@@ -128,22 +127,22 @@
             </div>
             <div class="col-sm-3">
                 <div class="card" style="width:100%">
-                    <img class="card-img-top" src="img/prancha.jpg" alt="Prancha surf" title="Prancha surf">
+                    <img class="card-img-top" src="img/kitvelas.jpg" alt="Kit Vela Aromatica" title="Kit Vela Aromatica">
                     <div class="card-body">
-                      <h4 class="card-title">Prancha para Surf</h4>
-                      <p class="card-text">Prancha Surf para Praia, diversão da criançada!!!</p>
-                      <p class="card-text"><b>R$ 20,00</b></p>
+                      <h4 class="card-title">Kit de Vela Aromaticas</h4>
+                      <p class="card-text">kit com 4 velas Aromaticas, cada uma com um cheiro especial!!! vela artesanal feita no copo de vidro</p>
+                      <p class="card-text"><b>R$ 10,00</b></p>
                       <a href="visualizarProduto.html" class="btn btn-primary">Ver Produto</a>
                     </div>
                   </div>
             </div>
             <div class="col-sm-3">
                 <div class="card" style="width:100%">
-                    <img class="card-img-top" src="img/boia flamingo.webp" alt="Boia de Flamingo" title="Boia de Flamingo">
+                    <img class="card-img-top" src="img/velademurango.jpg" alt="Vela Aromatica de Morango" title="Vela Aromatica de Morango">
                     <div class="card-body">
-                      <h4 class="card-title">Boia de Flamingo</h4>
-                      <p class="card-text">Boia de Flamingo para piscinas e praias, feito para crinças brincarem e se divertirem bastante com muito estilo</p>
-                      <p class="card-text"><b>R$ 30,00</b></p>
+                      <h4 class="card-title">Vela Aromatica de Morango</h4>
+                      <p class="card-text">Vela Aromatica com excência de Morango, vela artesanal feita no copo de vidro</p>
+                      <p class="card-text"><b>R$ 10,00</b></p>
                       <a href="visualizarProduto.html" class="btn btn-primary">Ver Produto</a>
                     </div>
                   </div>
@@ -151,10 +150,10 @@
         </div>
         <div class="col-sm-3">
           <div class="card" style="width:100%">
-              <img class="card-img-top" src="img/biquíni azul.jpg" alt="Biquíni azul" title="Biquíni Azul">
+              <img class="card-img-top" src="img/Amarrar Simples sexy Conjunto de biquíni.jpg" alt="Biquíni vermelho com Coração" title="Biquíni de Coração">
               <div class="card-body">
-                <h4 class="card-title">Biquíni Azul</h4>
-                <p class="card-text">Biquíni Azul para praia ou píscina/p>
+                <h4 class="card-title">Biquíni de Coração</h4>
+                <p class="card-text">Biquíni vermelho de coração para praia ou píscina/p>
                 <p class="card-text"><b>R$ 46,00</b></p>
                 <a href="visualizarProduto.html" class="btn btn-primary">Ver Produto</a>
               </div>
