--- a/visualizarProduto.html
+++ b/visualizarProduto.html
@@ -16,7 +16,8 @@
     
     <!--Container-Fluid que abrigará o Logotipo do Sistema-->
     <div class="container-fluid text-center" style="margin-top: 30px; margin-bottom: 30px;">
-         <h1>Aqui abrigará o logotipo do Sistema</h1>
+      <div class="card" style="width:100%">
+      <img class="card-img-top" src="img/concha.png">
     </div>
 
     <!--Aqui ficará a barra de navegação do Sistema-->
