--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     
     <!--Container-Fluid que abrigará o Logotipo do Sistema-->
     <div class="container-fluid text-center" style="margin-top: 30px; margin-bottom: 30px;">
-      <div class="card" style="width:100%">
-      <img class="card-img-top" src="img/concha.png">
+         <h1>Aqui abrigará o logotipo do Sistema</h1>
     </div>
 
     <!--Aqui ficará a barra de navegação do Sistema-->
